--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": " node server.js",
-    "devstart": ""
+    "dev": " node server.js"
   },
   "keywords": [],
   "author": "",
