--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": " node server.js",
+    "build": "cd client && vite build",
     "dev": " concurrently \"nodemon server.js\" \"cd client && vite\""
   },
   "keywords": [],
