Fix scripts for deploying

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "inventory-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": " node server.js",
-    "build": "cd client && vite build",
+    "build": "cd client && npm run build",
     "dev": " concurrently \"nodemon server.js\" \"cd client && vite\""
   },
   "keywords": [],
